--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ $(document).ready(function() {
 });
 </script><!-- End Featured Slider Elements -->
   </head>
-  <body style="                                       background-color: black;">
+  <body style="                                         background-color: black;">
     <div class="wrapper row1" style="height: 295px; background-color: black;">
       <div style="text-align: left;">
         <div style="text-align: center;">
@@ -29,8 +29,8 @@ $(document).ready(function() {
       <br>
     </div>
     <div class="wrapper row2" style="background-color: white; height: 72.75px; margin-top: 1.25px;">
-      <nav id="topnav" class="clear" style="width: 595px; margin-left: 408px;">
-        <ul style="margin-left: 279px; width: 649px; background-color: white;">
+      <nav id="topnav" class="clear" style="width: 595px; text-align: center;">
+        <ul style="margin-left: 25px; width: 649px; background-color: white;">
           <li class="active" style="text-align: center; background-color: white;"><span
               style="color: black;"><span style="font-family: Arial;"><span style="color: #ffffff;"><a
                     href="index.html">Home</a></span></span></span></li>
@@ -74,6 +74,7 @@ $(document).ready(function() {
           </span>
         </ul>
         <span style="font-family: Arial;"> <span style="color: black;"> </span></span></nav>
+      <br>
       <div style="text-align: center;"><br>
       </div>
     </div>
@@ -107,14 +108,14 @@ $(document).ready(function() {
           </ul>
         </section>
         <!-- main content -->
-        <div id="homepage" style="background-color: black;"> <span style="color: black;"><!-- ########################################################################################## -->
-          </span>
+        <div id="homepage" style="background-color: black;">
           <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;">Hello there! This site is where
                   I keep small coding projects I've worked on and random
                   creations like drawings, 3d renders, writings, edits, etc.
-                  Feel free to download and modify some of my stuff for personal
-                  use. Ладно?<br>
+                  Feel </span></span></span><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;">free to download and modify some
+                  of my stuff for personal use. Ладно?<br>
                 </span></span><span style="font-family: Alef;"><span style="font-family: Calibri;"></span></span><span
                 style="font-family: Alef;"><span style="font-family: Calibri;"></span></span></span><span
               style="font-family: Alef;"><span style="font-family: Calibri;"><span
