--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ $(document).ready(function() {
     <div class="wrapper row1" style="height: 295px; background-color: black;">
       <div style="text-align: left;">
         <div style="text-align: center;">
-          <header id="header" class="clear" style="background-color: black;"><img
+          <header id="header" class="clear" style="background-color: black;"><img
+
               src="images/aexlogonocoloredit.png" alt="Main Logo" style="width: 250px; height: 251px; margin-left: -15.45px; margin-top: -2px;">
           </header>
         </div>
@@ -31,50 +32,64 @@ $(document).ready(function() {
     <div class="wrapper row2" style="background-color: white; height: 72.75px; margin-top: 1.25px;">
       <nav id="topnav" class="clear" style="width: 595px; text-align: center;">
         <ul style="margin-left: 25px; width: 649px; background-color: white;">
-          <li class="active" style="text-align: center; background-color: white;"><span
-              style="color: black;"><span style="font-family: Arial;"><span style="color: #ffffff;"><a
+          <li class="active" style="text-align: center; background-color: white;"><span
+
+              style="color: black;"><span style="font-family: Arial;"><span style="color: #ffffff;"><a
+
                     href="index.html">Home</a></span></span></span></li>
           <span style="color: white;"> <span style="font-family: Arial;"> </span>
           </span>
-          <li style="background-color: white;"><span style="color: white;"><span
+          <li style="background-color: white;"><span style="color: white;"><span
+
                 style="font-family: Arial;"><a href="pages/error404.html">Projects</a></span></span></li>
           <span style="color: white;"> <span style="font-family: Arial;"> </span>
           </span>
-          <li style="background-color: white;"><span style="color: white;"><span
+          <li style="background-color: white;"><span style="color: white;"><span
+
                 style="font-family: Arial;"><br>
               </span></span> </li>
           <span style="color: black;"> <span style="font-family: Arial;"> </span>
           </span>
-          <li style="background-color: black;"><span style="color: black;"><span
+          <li style="background-color: black;"><span style="color: black;"><span
+
                 style="font-family: Arial;"><a href="pages/error404.html" style="margin-left: -32px;">Works</a></span></span></li>
           <span style="color: black;"> <span style="font-family: Arial;"> </span>
           </span>
-          <li style="background-color: white;"><span style="color: black;"><span
+          <li style="background-color: white;"><span style="color: black;"><span
+
                 style="font-family: Arial;"><a href="#">Socials</a></span></span>
-            <ul>
-              <li style="background-color: #fdfdfd;"><span style="color: black;"><span
-                    style="font-family: Arial;"><a href="pages/error404.html">Youtube</a></span></span></li>
+            <ul style="margin-left: -45px; width: 170px;">
+              <li style="background-color: #fdfdfd;"><br>
+                <span style="color: black;"><span style="font-family: Arial;"></span></span></li>
+              <li style="background-color: #fdfdfd;"><span style="color: black;"><span
+
+                    style="font-family: Arial;"><a href="https://www.youtube.com/channel/UCKTd-jIlLjKj_IVVMJmRw9g"
+
+                      target="_blank">Youtube</a></span></span></li>
               <span style="color: black;"> </span>
-              <li><span style="color: black;"><span style="font-family: Arial;"><a
-                      href="pages/error404.html">InstaGrAM</a></span></span></li>
+              <li><span style="color: black;"><span style="font-family: Arial;"><a
+
+                      href="https://www.instagram.com/aex10pics" target="_blank">InstaGrAM</a></span></span></li>
               <span style="color: black;"> </span>
-              <li><span style="color: black;"><span style="font-family: Arial;"><a
-                      href="pages/error404.html">StEAM</a></span></span></li>
+              <li><span style="color: black;"><span style="font-family: Arial;"><a
+
+                      href="https://steamcommunity.com/id/AEX10Playz" target="_blank">StEAM</a></span></span></li>
             </ul>
           </li>
           <span style="color: black;"> <span style="font-family: Arial;"> </span>
           </span>
-          <li style="background-color: black;"><span style="color: black;"><span
+          <li style="background-color: black;"><span style="color: black;"><span
+
                 style="font-family: Arial;"><a href="pages/error404.html">About</a></span></span></li>
           <span style="color: black;"> <span style="font-family: Arial;"> </span>
           </span>
-          <li class="last" style="background-color: black;"><span style="color: black;"><span
-                style="font-family: Arial;"><a href="pages/error404.html">Contact</a></span></span></li>
+          <li class="last" style="background-color: black;"><span style="color: black;"><span
+
+                style="font-family: Arial;"><a href="mailto:aex10@outlook.com">Contact</a></span></span></li>
           <span style="font-family: Arial;"> <span style="color: black;"> </span>
           </span>
         </ul>
         <span style="font-family: Arial;"> <span style="color: black;"> </span></span></nav>
-      <br>
       <div style="text-align: center;"><br>
       </div>
     </div>
@@ -109,17 +124,23 @@ $(document).ready(function() {
         </section>
         <!-- main content -->
         <div id="homepage" style="background-color: black;">
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
                   style="font-family: Calibri;">Hello there! This site is where
                   I keep small coding projects I've worked on and random
                   creations like drawings, 3d renders, writings, edits, etc.
-                  Feel </span></span></span><span style="color: white;"><span style="font-family: Alef;"><span
+                  Feel </span></span></span><span style="color: white;"><span style="font-family: Alef;"><span
+
                   style="font-family: Calibri;">free to download and modify some
                   of my stuff for personal use. Ладно?<br>
-                </span></span><span style="font-family: Alef;"><span style="font-family: Calibri;"></span></span><span
-                style="font-family: Alef;"><span style="font-family: Calibri;"></span></span></span><span
-              style="font-family: Alef;"><span style="font-family: Calibri;"><span
-                  style="color: red;"><span style="color: black;"> </span> </span></span></span><span
+                </span></span><span style="font-family: Alef;"><span style="font-family: Calibri;"></span></span><span
+
+                style="font-family: Alef;"><span style="font-family: Calibri;"></span></span></span><span
+
+              style="font-family: Alef;"><span style="font-family: Calibri;"><span
+
+                  style="color: red;"><span style="color: black;"> </span> </span></span></span><span
+
               style="font-family: Alef;"><span style="font-family: Calibri;"> </span></span>
           </div>
           <!-- / content body --> </div>
@@ -127,12 +148,14 @@ $(document).ready(function() {
       <!-- Footer -->
       <div class="wrapper row4" style="margin-top: 10.8333px; height: 10px; background-color: #cc0000;"><br>
         <div id="footer" class="clear" style="width: 800px;"> <br>
-          <iframe src="https://discordapp.com/widget?id=426877264261808128&amp;theme=dark"
+          <iframe src="https://discordapp.com/widget?id=426877264261808128&amp;theme=dark"
+
             allowtransparency="true" height="400" frameborder="0" width="800"></iframe>
         </div>
       </div>
       <div class="wrapper row5" style="margin-top: 514.833px; height: 82px; background-color: white;"><br>
-        <div id="footer" class="clear" style="width: 451px; margin-top: -2.28333px; height: 5px; margin-left: -154px; text-align: center;"><span
+        <div id="footer" class="clear" style="width: 451px; margin-top: -2.28333px; height: 5px; margin-left: -154px; text-align: center;"><span
+
             style="font-family: Calibri;"><span style="color: red;"><span style="color: #333333;">©2012-2020
                 AEX10</span><br>
             </span></span></div>
