--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@ Template Name: FusionEdgeAuthor: <a href="https://www.os-templates.com/">OS Temp
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>AEXTek</title>
+    <style>
+/* The emerging W3C standard
+   that is currently Firefox-only */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: red white;
+}
+
+/* Works on Chrome/Edge/Safari */
+body::-webkit-scrollbar {
+  width: 5px;               /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+  background:  rgba(256, 256, 256); ; /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(204, 0, 0);    /* color of the scroll thumb */
+}
+
+</style> <title>AEXTek</title>
     <link rel="stylesheet" href="layout/styles/layout.css" type="text/css">
     <!-- Featured Slider Elements -->
     <script src="layout/scripts/jquery.min.js"></script>
@@ -17,7 +36,7 @@ $(document).ready(function() {
 });
 </script><!-- End Featured Slider Elements -->
   </head>
-  <body style="                                         background-color: black;">
+  <body style="                                                       background-color: black;">
     <div class="wrapper row1" style="height: 295px; background-color: black;">
       <div style="text-align: left;">
         <div style="text-align: center;">
@@ -31,73 +50,43 @@ $(document).ready(function() {
     </div>
     <div class="wrapper row2" style="background-color: white; height: 72.75px; margin-top: 1.25px;">
       <nav id="topnav" class="clear" style="width: 595px; text-align: center;">
-        <ul style="margin-left: 25px; width: 649px; background-color: white;">
-          <li class="active" style="text-align: center; background-color: white;"><span
+        <ul style="margin-left: 23px; width: 577px;">
+          <span style="font-family: Arial;">
+            <li class="active"><a href="../index.html" title="Home">Home</a></li>
+            <li><a href="pages/error404.html" title="Projects">Projects</a></li>
+            <li><a href="pages/error404.html" title="Works">Works</a></li>
+            <li><a href="#">Socials</a>
+              <ul style="margin-left: -45px; width: 170px;">
+                <li style="background-color: #fdfdfd;"><br>
+                  <span style="color: black;"><span style="font-family: Arial;"></span></span></li>
+                <li style="background-color: #fdfdfd;"><span style="color: black;"><span
 
-              style="color: black;"><span style="font-family: Arial;"><span style="color: #ffffff;"><a
+                      style="font-family: Arial;"><a href="https://www.youtube.com/channel/UCKTd-jIlLjKj_IVVMJmRw9g"
 
-                    href="index.html">Home</a></span></span></span></li>
-          <span style="color: white;"> <span style="font-family: Arial;"> </span>
-          </span>
-          <li style="background-color: white;"><span style="color: white;"><span
+                        target="_blank">Youtube</a></span></span></li>
+                <span style="color: black;"> </span>
+                <li><span style="color: black;"><span style="font-family: Arial;"><a
 
-                style="font-family: Arial;"><a href="pages/error404.html">Projects</a></span></span></li>
-          <span style="color: white;"> <span style="font-family: Arial;"> </span>
-          </span>
-          <li style="background-color: white;"><span style="color: white;"><span
+                        href="https://www.instagram.com/aex10pics" target="_blank">Insta</a></span></span></li>
+                <span style="color: black;"> </span>
+                <li><span style="color: black;"><span style="font-family: Arial;"><a
 
-                style="font-family: Arial;"><br>
-              </span></span> </li>
-          <span style="color: black;"> <span style="font-family: Arial;"> </span>
-          </span>
-          <li style="background-color: black;"><span style="color: black;"><span
+                        href="https://steamcommunity.com/id/AEX10Playz" target="_blank">Steam</a></span></span></li>
+              </ul>
+            </li>
+            <li> <a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
 
-                style="font-family: Arial;"><a href="pages/error404.html" style="margin-left: -32px;">Works</a></span></span></li>
-          <span style="color: black;"> <span style="font-family: Arial;"> </span>
-          </span>
-          <li style="background-color: white;"><span style="color: black;"><span
-
-                style="font-family: Arial;"><a href="#">Socials</a></span></span>
-            <ul style="margin-left: -45px; width: 170px;">
-              <li style="background-color: #fdfdfd;"><br>
-                <span style="color: black;"><span style="font-family: Arial;"></span></span></li>
-              <li style="background-color: #fdfdfd;"><span style="color: black;"><span
-
-                    style="font-family: Arial;"><a href="https://www.youtube.com/channel/UCKTd-jIlLjKj_IVVMJmRw9g"
-
-                      target="_blank">Youtube</a></span></span></li>
-              <span style="color: black;"> </span>
-              <li><span style="color: black;"><span style="font-family: Arial;"><a
-
-                      href="https://www.instagram.com/aex10pics" target="_blank">InstaGrAM</a></span></span></li>
-              <span style="color: black;"> </span>
-              <li><span style="color: black;"><span style="font-family: Arial;"><a
-
-                      href="https://steamcommunity.com/id/AEX10Playz" target="_blank">StEAM</a></span></span></li>
-            </ul>
-          </li>
-          <span style="color: black;"> <span style="font-family: Arial;"> </span>
-          </span>
-          <li style="background-color: black;"><span style="color: black;"><span
-
-                style="font-family: Arial;"><a href="pages/error404.html">About</a></span></span></li>
-          <span style="color: black;"> <span style="font-family: Arial;"> </span>
-          </span>
-          <li class="last" style="background-color: black;"><span style="color: black;"><span
-
-                style="font-family: Arial;"><a href="mailto:aex10@outlook.com">Contact</a></span></span></li>
-          <span style="font-family: Arial;"> <span style="color: black;"> </span>
+                title="About">About</a></li>
+            <li><a href="mailto:aex10@outlook.com" title="Contact">Contact</a></li>
           </span>
         </ul>
-        <span style="font-family: Arial;"> <span style="color: black;"> </span></span></nav>
-      <div style="text-align: center;"><br>
-      </div>
+      </nav>
     </div>
     <!-- content -->
     <div class="wrapper row3" style="background-color: #000000; height: 911.333px; margin-top: -33.3333px;">
       <div id="container" class="clear" style="margin-top: 22px;">
         <!-- Slider -->
-        <section id="featured_slide_">
+        <section id="featured_slide_" style="margin-top: 160.217px; height: 340px;">
           <!-- ########################################################################################## -->
           <ul id="featured_slide_Content">
             <li class="featured_slide_Image">
@@ -126,13 +115,56 @@ $(document).ready(function() {
         <div id="homepage" style="background-color: black;">
           <div><span style="color: white;"><span style="font-family: Alef;"><span
 
-                  style="font-family: Calibri;">Hello there! This site is where
-                  I keep small coding projects I've worked on and random
-                  creations like drawings, 3d renders, writings, edits, etc.
-                  Feel </span></span></span><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"></span></span></span><span style="color: white;"><span
 
-                  style="font-family: Calibri;">free to download and modify some
-                  of my stuff for personal use. Ладно?<br>
+                style="font-family: Alef;"><span style="font-family: Calibri;"><span
+
+                    style="color: #33ff33;">Read the Latest Update (7/27/2020):</span></span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><br>
+                  <span style="color: #979797;"><span style="font-family: Calibri Light,&quot;Calibri Light&quot;,Times,serif;"></span></span></span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><span style="color: #33ff33;"><br>
+                  </span></span></span></span> </div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><span style="color: #33ff33;"><br>
+                  </span></span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><span style="color: #33ff33;"></span><img
+
+                    src="file:///E:/Projects/GIT/Website/Testing%20Branch/images/updatebar.png"
+
+                    alt="" style="width: 952.444px; height: 231.889px; margin-left: -11.0778px;"><br>
+                </span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;">Still working on finishing up
+                  this site, I've already collected everything I wanna put on
+                  here. Just need to finish the pages and start uploading
+                  everything. I like graphic design so I spend a lot more time
+                  than I should trying to get every little detail right. I don't
+                  really have much experience with CSS so I've mostly been using
+                  HTML and JS to embed features and add graphics. Here is the
+                  changelog so far:<br>
+                </span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <div><br>
+            <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">
                 </span></span><span style="font-family: Alef;"><span style="font-family: Calibri;"></span></span><span
 
                 style="font-family: Alef;"><span style="font-family: Calibri;"></span></span></span><span
@@ -146,7 +178,11 @@ $(document).ready(function() {
           <!-- / content body --> </div>
       </div>
       <!-- Footer -->
-      <div class="wrapper row4" style="margin-top: 10.8333px; height: 10px; background-color: #cc0000;"><br>
+      <div class="wrapper row3" style="margin-top: -496.167px; height: 20px; background-color: #cc0000;"><br>
+        <div id="footer" class="clear" style="width: 800px;"> <br>
+        </div>
+      </div>
+      <div class="wrapper row4" style="margin-top: 512.833px; height: 17px; background-color: #cc0000;"><br>
         <div id="footer" class="clear" style="width: 800px;"> <br>
           <iframe src="https://discordapp.com/widget?id=426877264261808128&amp;theme=dark"
 
