--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@ $(document).ready(function() {
 });
 </script><!-- End Featured Slider Elements -->
   </head>
-  <body style="                                                       background-color: black;">
+  <body style="                                                                             background-color: black;">
     <div class="wrapper row1" style="height: 295px; background-color: black;">
       <div style="text-align: left;">
         <div style="text-align: center;">
-          <header id="header" class="clear" style="background-color: black;"><img
-
-              src="images/aexlogonocoloredit.png" alt="Main Logo" style="width: 250px; height: 251px; margin-left: -15.45px; margin-top: -2px;">
+          <!-- Logo -->
+          <header id="header" class="clear" style="background-color: black;"><img
+              src="images/aexlogonocoloredit.png" alt="Main Logo" style="width: 259.111px; height: 212px; margin-left: -18.7778px; margin-top: -6.43334px;">
           </header>
         </div>
       </div>
       <br>
     </div>
-    <div class="wrapper row2" style="background-color: white; height: 72.75px; margin-top: 1.25px;">
+    <!-- Nav Bar -->
+    <div class="wrapper row2" style="background-color: white; height: 73.5556px; margin-top: -49.85px;">
       <nav id="topnav" class="clear" style="width: 595px; text-align: center;">
         <ul style="margin-left: 23px; width: 577px;">
           <span style="font-family: Arial;">
@@ -59,35 +60,35 @@ $(document).ready(function() {
               <ul style="margin-left: -45px; width: 170px;">
                 <li style="background-color: #fdfdfd;"><br>
                   <span style="color: black;"><span style="font-family: Arial;"></span></span></li>
-                <li style="background-color: #fdfdfd;"><span style="color: black;"><span
-
-                      style="font-family: Arial;"><a href="https://www.youtube.com/channel/UCKTd-jIlLjKj_IVVMJmRw9g"
-
+                <li style="background-color: #fdfdfd;"><span style="color: black;"><span
+                      style="font-family: Arial;"><a href="https://www.youtube.com/channel/UCKTd-jIlLjKj_IVVMJmRw9g"
                         target="_blank">Youtube</a></span></span></li>
                 <span style="color: black;"> </span>
-                <li><span style="color: black;"><span style="font-family: Arial;"><a
-
-                        href="https://www.instagram.com/aex10pics" target="_blank">Insta</a></span></span></li>
+                <li><span style="color: black;"><span style="font-family: Arial;"><a
+                        href="https://www.instagram.com/aex10pics" target="_blank">Instagram</a></span></span></li>
                 <span style="color: black;"> </span>
-                <li><span style="color: black;"><span style="font-family: Arial;"><a
-
+                <li><span style="color: black;"><span style="font-family: Arial;"><a
                         href="https://steamcommunity.com/id/AEX10Playz" target="_blank">Steam</a></span></span></li>
               </ul>
             </li>
-            <li> <a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
-
+            <li> <a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
                 title="About">About</a></li>
             <li><a href="mailto:aex10@outlook.com" title="Contact">Contact</a></li>
           </span>
         </ul>
       </nav>
     </div>
-    <!-- content -->
+    <!-- Content -->
     <div class="wrapper row3" style="background-color: #000000; height: 911.333px; margin-top: -33.3333px;">
       <div id="container" class="clear" style="margin-top: 22px;">
-        <!-- Slider -->
-        <section id="featured_slide_" style="margin-top: 160.217px; height: 340px;">
-          <!-- ########################################################################################## -->
+        <!-- Welcome -->
+        <dl>
+          <dt> <img src="file:///E:/Projects/GIT/Website/Testing%20Branch/images/welcome.png"
+              alt="" style="width: 675px; height: 207px; margin-left: 144.533px; margin-top: -27.7555px;">
+          </dt>
+        </dl>
+        <section id="featured_slide_" style="margin-top: 31.3333px; height: 355.667px;">
+          <!-- Slideshow -->
           <ul id="featured_slide_Content">
             <li class="featured_slide_Image">
               <figure><a href="#"><img src="images/memechaser.png" alt=""></a> <figcaption>
@@ -96,56 +97,53 @@ $(document).ready(function() {
                 </figcaption> </figure>
             </li>
             <li class="featured_slide_Image">
-              <figure><a href="#"><img src="images/breakout.png" alt=""></a> <figcaption>
-                  <h2>Breakout Shinjuku Edition</h2>
-                  <p>Straight from a 2000s arcade.</p>
+              <figure><a href="#"><img src="images/snakesouls.png" alt=""></a> <figcaption>
+                  <h2>SnakeSouls RGB Edition</h2>
+                  <p>Snake but even harder and more unfair.</p>
                 </figcaption> </figure>
             </li>
             <li class="featured_slide_Image">
-              <figure><a href="#"><img src="images/snakesouls.png" alt=""></a> <figcaption>
-                  <h2>SnakeSouls (RGB Edition)</h2>
-                  <p>Snake but even harder and more unfair.</p>
+              <figure><a href="#"><img src="images/breakout.png" alt=""></a> <figcaption>
+                  <h2>Breakout Shinjuku Edition</h2>
+                  <p>Straight from a 2000s arcade.</p>
                 </figcaption> </figure>
             </li>
             <li class="clear featured_slide_Image"><!-- Important - Leave This Empty --><br>
             </li>
           </ul>
         </section>
-        <!-- main content -->
+        <!-- Updates -->
         <div id="homepage" style="background-color: black;">
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
-                  style="font-family: Calibri;"></span></span></span><span style="color: white;"><span
-
-                style="font-family: Alef;"><span style="font-family: Calibri;"><span
-
+          <div style="margin-top: -15.5611px; height: 17.1111px;"><span style="color: white;"><span
+                style="font-family: Alef;"><span style="font-family: Calibri;"></span></span></span><span
+              style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><span
+                    style="color: #33ff33;"><br>
+                  </span></span></span></span></div>
+          <div style="margin-top: -15.5611px; height: 17.1111px;"><span style="color: white;"><span
+                style="font-family: Alef;"><span style="font-family: Calibri;"><span
+                    style="color: #33ff33;"><br>
+                  </span></span></span></span></div>
+          <div style="margin-top: -12.6833px; height: 20px;"><span style="color: white;"><span
+                style="font-family: Alef;"><span style="font-family: Calibri;"><span
                     style="color: #33ff33;">Read the Latest Update (7/27/2020):</span></span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><br>
                   <span style="color: #979797;"><span style="font-family: Calibri Light,&quot;Calibri Light&quot;,Times,serif;"></span></span></span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><span style="color: #33ff33;"><br>
                   </span></span></span></span> </div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><span style="color: #33ff33;"><br>
                   </span></span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
-                  style="font-family: Calibri;"><span style="color: #33ff33;"></span><img
-
-                    src="file:///E:/Projects/GIT/Website/Testing%20Branch/images/updatebar.png"
-
-                    alt="" style="width: 952.444px; height: 231.889px; margin-left: -11.0778px;"><br>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><span style="color: #33ff33;"></span><img
+                    src="file:///E:/Projects/GIT/Website/Testing%20Branch/images/updatebar.png"
+                    alt="" style="width: 952.444px; height: 238px; margin-left: -11.0778px; margin-top: -16.6667px;"><br>
                 </span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><br>
                 </span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
+          <div style="text-align: left;"><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;">Still working on finishing up
                   this site, I've already collected everything I wanna put on
                   here. Just need to finish the pages and start uploading
@@ -153,49 +151,61 @@ $(document).ready(function() {
                   than I should trying to get every little detail right. I don't
                   really have much experience with CSS so I've mostly been using
                   HTML and JS to embed features and add graphics. Here is the
-                  changelog so far:<br>
-                </span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
+                  last changelog:</span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><br>
-                </span></span></span></div>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-
-                  style="font-family: Calibri;"><br>
-                </span></span></span></div>
-          <div><br>
-            <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">
-                </span></span><span style="font-family: Alef;"><span style="font-family: Calibri;"></span></span><span
-
-                style="font-family: Alef;"><span style="font-family: Calibri;"></span></span></span><span
-
-              style="font-family: Alef;"><span style="font-family: Calibri;"><span
-
-                  style="color: red;"><span style="color: black;"> </span> </span></span></span><span
-
-              style="font-family: Alef;"><span style="font-family: Calibri;"> </span></span>
+                </span></span></span>
+            <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"> Website Source Files and Code
+                    v1.4a</span></span></span></div>
           </div>
-          <!-- / content body --> </div>
+          <div>
+            <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"><span style="color: #ffcc33;">Cleaned
+                      up some more files and code</span></span></span></span><br>
+              <span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"> <span style="color: #33ff33;">Added
+                      custom scrollbar</span></span></span></span><br>
+              <span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"><span style="color: #33ff33;">
+                      Added Updates Section</span></span></span></span><br>
+              <span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"><span style="color: #33ff33;">
+                      Added About page (Under Construction)</span></span></span></span><br>
+              <span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"> <span style="color: #ffcc33;">Updated
+                      SnakeSouls banner</span></span></span></span><br>
+              <span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"></span></span></span></div>
+            <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">
+                  <br>
+                </span></span></span></div>
+          <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;">That's about it 👌.&nbsp; <br>
+                </span></span></span></div>
+          <div style="text-align: center;"><img src="images/bonk.png" alt="" style="width: 404px; height: 336px; margin-left: 21px;"></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <!-- Update content end --> </div>
       </div>
-      <!-- Footer -->
-      <div class="wrapper row3" style="margin-top: -496.167px; height: 20px; background-color: #cc0000;"><br>
-        <div id="footer" class="clear" style="width: 800px;"> <br>
-        </div>
+      <!-- Divider -->
+      <div class="wrapper row3" style="background-color: #cc0000; height: 20px; margin-top: -1001.85px;"><br>
       </div>
-      <div class="wrapper row4" style="margin-top: 512.833px; height: 17px; background-color: #cc0000;"><br>
-        <div id="footer" class="clear" style="width: 800px;"> <br>
-          <iframe src="https://discordapp.com/widget?id=426877264261808128&amp;theme=dark"
-
-            allowtransparency="true" height="400" frameborder="0" width="800"></iframe>
-        </div>
+    </div>
+    <!-- Discord -->
+    <div class="wrapper row4" style="margin-top: 785.833px; height: 19px; background-color: #cc0000;"><br>
+      <div id="footer" class="clear" style="width: 800px;"> <br>
+        <iframe src="https://discordapp.com/widget?id=426877264261808128&amp;theme=dark"
+          allowtransparency="true" height="400" frameborder="0" width="800"></iframe>
       </div>
-      <div class="wrapper row5" style="margin-top: 514.833px; height: 82px; background-color: white;"><br>
-        <div id="footer" class="clear" style="width: 451px; margin-top: -2.28333px; height: 5px; margin-left: -154px; text-align: center;"><span
-
-            style="font-family: Calibri;"><span style="color: red;"><span style="color: #333333;">©2012-2020
-                AEX10</span><br>
-            </span></span></div>
-      </div>
+    </div>
+    <!-- Copyright -->
+    <div class="wrapper row5" style="margin-top: 514.833px; height: 82px; background-color: white;"><br>
+      <div id="footer3" class="clear" style="width: 454px; margin-top: 29.7167px; height: 22px; margin-left: -154px; text-align: center;"><span
+          style="font-family: Calibri;"><span style="color: red;"><span style="color: #333333;">©2012-2020
+              AEX10</span><br>
+          </span></span></div>
     </div>
   </body>
 </html>
