--- a/pages/about.html
+++ b/pages/about.html
@@ -5,29 +5,48 @@ Licence URI: https://www.os-templates.com/template-terms-->
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>About</title>
+    <style>
+/* The emerging W3C standard
+   that is currently Firefox-only */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: red white;
+}
+
+/* Works on Chrome/Edge/Safari */
+body::-webkit-scrollbar {
+  width: 5px;               /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+  background:  rgba(256, 256, 256); ; /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(204, 0, 0);    /* color of the scroll thumb */
+}
+
+</style> <title>About</title>
     <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css">
   </head>
-  <body style="                                                   background-color: black;">
+  <body style="                  background-color: black; height: 200px;">
     <div class="wrapper row1" style="height: 295px; background-color: black;">
       <div style="text-align: left;">
         <div style="text-align: center;">
+          <!-- Logo -->
           <header id="header" class="clear" style="background-color: black;"><img
-              src="../images/aexlogonocoloredit.png" alt="Main Logo" style="width: 250px; height: 251px; margin-left: -15.45px; margin-top: -2px;">
+              src="../images/aexlogonocoloredit.png" alt="Main Logo" style="width: 259.111px; height: 212px; margin-left: -18.7778px; margin-top: -6.43334px;">
           </header>
         </div>
       </div>
       <br>
     </div>
-    <div class="wrapper row2" style="background-color: white; height: 72.75px; margin-top: 1.25px;">
+    <!-- Nav Bar -->
+    <div class="wrapper row2" style="background-color: white; height: 73.5556px; margin-top: -49.85px;">
       <nav id="topnav" class="clear" style="width: 595px; text-align: center;">
         <ul style="margin-left: 23px; width: 577px;">
           <span style="font-family: Arial;">
-            <li><a href="../index.html" title="Home">Home</a></li>
-            <li><a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/projects.html"
-                title="Projects">Projects</a></li>
-            <li><a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/works.html"
-                title="Works">Works</a></li>
+            <li class="active"><a href="../index.html" title="Home">Home</a></li>
+            <li><a href="pages/error404.html" title="Projects">Projects</a></li>
+            <li><a href="pages/error404.html" title="Works">Works</a></li>
             <li><a href="#">Socials</a>
               <ul style="margin-left: -45px; width: 170px;">
                 <li style="background-color: #fdfdfd;"><br>
@@ -37,53 +56,69 @@ Licence URI: https://www.os-templates.com/template-terms-->
                         target="_blank">Youtube</a></span></span></li>
                 <span style="color: black;"> </span>
                 <li><span style="color: black;"><span style="font-family: Arial;"><a
-                        href="https://www.instagram.com/aex10pics" target="_blank">Insta</a></span></span></li>
+                        href="https://www.instagram.com/aex10pics" target="_blank">Instagram</a></span></span></li>
                 <span style="color: black;"> </span>
                 <li><span style="color: black;"><span style="font-family: Arial;"><a
                         href="https://steamcommunity.com/id/AEX10Playz" target="_blank">Steam</a></span></span></li>
               </ul>
             </li>
-            <li class="active"><a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
+            <li> <a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
                 title="About">About</a></li>
             <li><a href="mailto:aex10@outlook.com" title="Contact">Contact</a></li>
           </span>
         </ul>
       </nav>
     </div>
-    <!-- content -->
-    <div class="wrapper row3">
-      <div id="container" class="clear">
-        <!-- content body -->
-        <h1 style="text-align: center;"><span style="color: white;">Hello<br>
-          </span></h1>
-        <div style="text-align: center;"><span style="color: white;"></span><span
-            style="color: white;"></span></div>
-        <p style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
-                style="font-family: Calibri;">This site is where I keep small
-                coding projects I've worked on and random creations like
-                drawings, 3d renders, writings, edits, etc. Feel </span></span></span><span
-            style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">free
-                to download and modify some of my stuff for personal use. </span></span></span></p>
-        <div style="text-align: center;"><span style="color: white;"> </span></div>
-        <p><span style="color: white;"><br>
-          </span></p>
-        <span style="color: white;"> </span>
-        <ul>
-          <!-- / content body -->
-        </ul>
+    <!-- Content -->
+    <div class="wrapper row3" style="background-color: black; height: 737px; margin-top: -33.3333px;">
+      <div id="container" class="clear" style="margin-top: 22px; height: 352px;">
+        <div id="homepage" style="background-color: black; height: 345px; margin-top: 72px;">
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><span style="color: #33ff33;"><br>
+                  </span></span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><span style="color: #33ff33;"></span><img
+                    src="../images/aboutbar.png" style="width: 952.444px; height: 246px; margin-left: -11.0778px; margin-top: -93.6667px;"><br>
+                </span></span></span></div>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <div style="text-align: left;"><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <div style="text-align: left;"><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><br>
+                </span></span></span></div>
+          <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;">Hello there! This site is where
+                  I keep small coding projects I've worked on and random
+                  creations like drawings, 3D renders, writings, edits, etc.
+                  Feel </span></span></span><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><span style="color: white;"><span
+                      style="font-family: Alef;"><span style="font-family: Calibri;">free
+                        to download and modify some of my </span></span></span></span></span></span><span
+              style="color: rgb(255, 255, 255); font-family: Calibri; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(0, 0, 0); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">stuff
+              for personal use.</span></div>
+          <div style="text-align: center;"><br>
+            <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
+                    style="font-family: Calibri;"><img src="../images/oldtv1.gif"
+                      alt="" style="width: 157px; height: 236px;"><img src="../images/flames.gif"
+                      alt="" style="width: 351px; height: 230px; margin-left: 134.478px; margin-top: 43.3278px;"></span></span></span><span
+                style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><img
+                      src="../images/question.gif" style="width: 167px; height: 163px; margin-top: 98.9px; margin-left: 134.45px;"></span></span></span></div>
+          </div>
+        </div>
       </div>
     </div>
-    <!-- Footer -->
-    <div class="wrapper row4">
-      <div id="footer" class="clear"> <br>
+    <div class="wrapper row4" style="margin-top: -425.167px; height: 24px; background-color: #cc0000;"><br>
+      <div id="footer" class="clear" style="width: 800px;"> <br>
       </div>
     </div>
-    <!-- Copyright -->
-    <div class="wrapper row5">
-      <footer id="copyright" class="clear">
-        <p class="fl_left" style="margin-left: -327px; width: 144px; height: 25px; margin-top: 10px;"><span
-            style="color: black;">©2012-2020 AEX10</span><span style="color: black;"></span></p>
-      </footer>
+    <div class="wrapper row5" style="margin-top: 378.272px; height: 81.7778px; background-color: white;"><br>
+      <div id="footer3" class="clear" style="width: 451px; margin-top: 30.7167px; height: 22px; margin-left: -154px; text-align: center;"><span
+          style="font-family: Calibri;"><span style="color: red;"><span style="color: #333333;">©2012-2020
+              AEX10</span><br>
+          </span></span></div>
     </div>
   </body>
 </html>
