--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@ $(document).ready(function() {
       <div id="container" class="clear" style="margin-top: 22px;">
         <!-- Welcome -->
         <dl>
-          <dt> <img src="file:///E:/Projects/GIT/Website/Testing%20Branch/images/welcome.png"
-              alt="" style="width: 675px; height: 207px; margin-left: 144.533px; margin-top: -27.7555px;">
+          <dt> <img src="images/welcome.png" style="width: 675px; height: 207px; margin-left: 144.533px; margin-top: -27.7555px;">
           </dt>
         </dl>
         <section id="featured_slide_" style="margin-top: 31.3333px; height: 355.667px;">
@@ -137,8 +136,7 @@ $(document).ready(function() {
                   </span></span></span></span></div>
           <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><span style="color: #33ff33;"></span><img
-                    src="file:///E:/Projects/GIT/Website/Testing%20Branch/images/updatebar.png"
-                    alt="" style="width: 952.444px; height: 238px; margin-left: -11.0778px; margin-top: -16.6667px;"><br>
+                    src="images/updatebar.png" style="width: 952.444px; height: 238px; margin-left: -11.0778px; margin-top: -16.6667px;"><br>
                 </span></span></span></div>
           <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><br>
