--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ $(document).ready(function() {
                         href="https://steamcommunity.com/id/AEX10Playz" target="_blank">Steam</a></span></span></li>
               </ul>
             </li>
-            <li> <a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
-                title="About">About</a></li>
+            <li> <a href="pages/about.html" title="About">About</a></li>
             <li><a href="mailto:aex10@outlook.com" title="Contact">Contact</a></li>
           </span>
         </ul>
