--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ $(document).ready(function() {
         <ul style="margin-left: 23px; width: 577px;">
           <span style="font-family: Arial;">
             <li class="active"><a href="../index.html" title="Home">Home</a></li>
-            <li><a href="pages/error404.html" title="Projects">Projects</a></li>
-            <li><a href="pages/error404.html" title="Works">Works</a></li>
+            <li><a href="pages/404.html" title="Projects">Projects</a></li>
+            <li><a href="pages/404.html" title="Works">Works</a></li>
             <li><a href="#">Socials</a>
               <ul style="margin-left: -45px; width: 170px;">
                 <li style="background-color: #fdfdfd;"><br>
