--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
-Template Name: FusionEdgeAuthor: <a href="https://www.os-templates.com/">OS Templates</a>Author URI: https://www.os-templates.com/Licence: Free to use under our free template licence terms
-Licence URI: https://www.os-templates.com/template-terms-->
+Template Name: FusionEdgeAuthor: <a href="https://www.os-templates.com/">OS Templates</a>Author URI: https://www.os-templates.com/Licence: Free to use under our free template licence termsLicence URI: https://www.os-templates.com/template-terms-->
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -27,7 +26,7 @@ body::-webkit-scrollbar-thumb {
 </style> <title>About</title>
     <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css">
   </head>
-  <body style="                  background-color: black; height: 200px;">
+  <body style="                   background-color: black; height: 200px;">
     <div class="wrapper row1" style="height: 295px; background-color: black;">
       <div style="text-align: left;">
         <div style="text-align: center;">
@@ -44,7 +43,7 @@ body::-webkit-scrollbar-thumb {
       <nav id="topnav" class="clear" style="width: 595px; text-align: center;">
         <ul style="margin-left: 23px; width: 577px;">
           <span style="font-family: Arial;">
-            <li class="active"><a href="../index.html" title="Home">Home</a></li>
+            <li><a href="../index.html" title="Home">Home</a></li>
             <li><a href="pages/error404.html" title="Projects">Projects</a></li>
             <li><a href="pages/error404.html" title="Works">Works</a></li>
             <li><a href="#">Socials</a>
@@ -62,8 +61,7 @@ body::-webkit-scrollbar-thumb {
                         href="https://steamcommunity.com/id/AEX10Playz" target="_blank">Steam</a></span></span></li>
               </ul>
             </li>
-            <li> <a href="file:///E:/Projects/GIT/Website/Testing%20Branch/pages/about.html"
-                title="About">About</a></li>
+            <li class="active"> <a href="about.html" title="About">About</a></li>
             <li><a href="mailto:aex10@outlook.com" title="Contact">Contact</a></li>
           </span>
         </ul>
@@ -101,11 +99,11 @@ body::-webkit-scrollbar-thumb {
               for personal use.</span></div>
           <div style="text-align: center;"><br>
             <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"><img src="../images/oldtv1.gif"
-                      alt="" style="width: 157px; height: 236px;"><img src="../images/flames.gif"
+                    style="font-family: Calibri;"><img src="../images/parrot.gif"
+                      style="width: 157px; height: 205px;"><img src="../images/flames.gif"
                       alt="" style="width: 351px; height: 230px; margin-left: 134.478px; margin-top: 43.3278px;"></span></span></span><span
                 style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><img
-                      src="../images/question.gif" style="width: 167px; height: 163px; margin-top: 98.9px; margin-left: 134.45px;"></span></span></span></div>
+                      src="../images/coin.gif" style="width: 175px; height: 161.333px; margin-top: 55.5723px; margin-left: 65.5608px;"></span></span></span></div>
           </div>
         </div>
       </div>
