--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 </style> <title>Error!</title>
-    <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css">
+    <link rel="stylesheet" href="layout/styles/layout.css" type="text/css">
   </head>
   <body style="                                        background-color: black; height: 200px;">
     <div class="wrapper row3" style="background-color: black; height: 737px; margin-top: -33.3333px;">
@@ -32,7 +32,7 @@ body::-webkit-scrollbar-thumb {
         <div id="homepage" style="background-color: black; height: 345px; margin-top: 72px;">
           <div style="text-align: center; margin-top: -32px; height: 259px;"><br>
             <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><img
-                    src="../images/errorbar.png" style="width: 1186px; height: 293px; margin-left: -104.083px; margin-top: -56.7833px;"></span></span></span></div>
+                    src="images/errorbar.png" style="width: 1186px; height: 293px; margin-left: -104.083px; margin-top: -56.7833px;"></span></span></span></div>
           <div style="height: 146.778px; margin-top: -21.1111px; text-align: center;"><span
               style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><br>
                 </span></span></span></div>
@@ -47,7 +47,7 @@ body::-webkit-scrollbar-thumb {
                         style="font-family: Calibri;">Please click <a href="../index.html"
                           title="Homepage" style="color: #33ff33;">here</a> to
                         go home.</span></span></span></span></span></span></div>
-          <img src="../images/404upscaled.png" alt="" style="width: 293px; height: 256px; margin-top: 25px; margin-left: 335px;">
+          <img src="images/404upscaled.png" alt="" style="width: 293px; height: 256px; margin-top: 25px; margin-left: 335px;">
           <div style="height: 31px; margin-top: -94.9px; text-align: center;"><span
               style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><br>
                 </span></span></span></div>
