--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ $(document).ready(function() {
         <ul style="margin-left: 23px; width: 577px;">
           <span style="font-family: Arial;">
             <li class="active"><a href="../index.html" title="Home">Home</a></li>
-            <li><a href="pages/404.html" title="Projects">Projects</a></li>
-            <li><a href="pages/404.html" title="Works">Works</a></li>
+            <li><a href="404.html" title="Projects">Projects</a></li>
+            <li><a href="404.html" title="Works">Works</a></li>
             <li><a href="#">Socials</a>
               <ul style="margin-left: -45px; width: 170px;">
                 <li style="background-color: #fdfdfd;"><br>
@@ -154,24 +154,19 @@ $(document).ready(function() {
                 </span></span></span>
             <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
                     style="font-family: Calibri;"> Website Source Files and Code
-                    v1.4a</span></span></span></div>
+                    v1.0b</span></span></span></div>
           </div>
-          <div>
+          <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><span
+                  style="color: #ffcc33;"></span></span></span></span>
+          <div><span style="color: white;"><span style="font-family: Alef;"><span
+                  style="font-family: Calibri;"><span style="color: #ffcc33;"></span></span></span></span>
             <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"><span style="color: #ffcc33;">Cleaned
-                      up some more files and code</span></span></span></span><br>
-              <span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"> <span style="color: #33ff33;">Added
-                      custom scrollbar</span></span></span></span><br>
-              <span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"><span style="color: #33ff33;">
-                      Added Updates Section</span></span></span></span><br>
-              <span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"><span style="color: #33ff33;">
-                      Added About page (Under Construction)</span></span></span></span><br>
-              <span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"> <span style="color: #ffcc33;">Updated
-                      SnakeSouls banner</span></span></span></span><br>
+                    style="font-family: Calibri;"><span style="color: #ffcc33;"><span
+                        style="color: yellow;">Finalized Homepage</span><br>
+                      <span style="color: #33ff33;">Completed About page</span><br>
+                      <span style="color: #33ff33;">Completed 404 page</span><br>
+                      <span style="color: red;">Fixed some page refs</span><br>
+                      <span style="color: yellow;">Updated CSS</span></span></span></span></span><br>
               <span style="color: white;"><span style="font-family: Alef;"><span
                     style="font-family: Calibri;"></span></span></span></div>
             <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">
